--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 uvicorn==0.24.0.post1
 fastapi==0.104.1
-polars==0.19.12
+polars==0.19.13
+geopolars==0.1.0a4
+geopandas[pandas]==0.14.1
+pandas==2.1.3
 redis[hiredis]==5.0.1
